# music-organizer

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
cli/: enrich.py  main.py  organize.py  pipeline.py  recalibrate.py  resolve.py  serve.py  tag.py
core/: analyzer.py  config.py  enricher.py  models.py  organizer.py  recalibrator.py  resolver.py  sources.py  tagger.py  tracklist.py  unreleased.py
docs/: MODELS.md  PLAN_FASE_1.md  ROADMAP.md
scripts/: download_models.sh
tests/: test_analyzer.py  test_config.py  test_enricher.py  test_organizer.py  test_recalibrator.py  test_resolve_cli.py  test_resolver.py  test_resolver_web.py  test_runner.py  test_sources.py  test_tagger.py  test_tracklist.py  test_unreleased.py
web/: main.py  runner.py  state.py  worker.py
web/routes/: api.py  pages.py  resolver.py
web/static/: app.css  histogram.js
web/templates/: _resolver_panel.html  base.html  index.html  progress.html  resolver.html  results.html
